--- a/horoscope.html
+++ b/horoscope.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <script src="horoscope.js"></script>
     <style>
         body{
@@ -12,10 +13,13 @@
 </head>
 <body>
 
+
 <p style =" font-size:35px"> Find Your Horoscope!
-<p> Name:
-<input type="text" id="name" value="" size="25">
-<select id="month">
+<p>Your Name:
+<input type="text" id="name" value="" size="20">
+
+<select id="month" onchange="doDays(this.value)">
+    <option> Month
     <option value="1"> January</option>
     <option value="2"> February</option>
     <option value="3"> March</option>
@@ -29,41 +33,19 @@
     <option value="11"> November</option>
     <option value="12">  December</option>
 </select>
-<select id="day">
-    <option value="1"> 1</option>
-    <option value="2"> 2</option>
-    <option value="3"> 3</option>
-    <option value="4"> 4</option>
-    <option value="5"> 5</option>
-    <option value="6"> 6</option>
-    <option value="7"> 7</option>
-    <option value="8"> 8</option>
-    <option value="9"> 9</option>
-    <option value="10"> 10</option>
-    <option value="11"> 11</option>
-    <option value="12"> 12</option>
-    <option value="13"> 13</option>
-    <option value="14"> 14</option>
-    <option value="15"> 15</option>
-    <option value="16"> 16</option>
-    <option value="17"> 17</option>
-    <option value="18"> 18</option>
-    <option value="19"> 19</option>
-    <option value="20"> 20</option>
-    <option value="21"> 21</option>
-    <option value="22"> 22</option>
-    <option value="23"> 23</option>
-    <option value="24"> 24</option>
-    <option value="25"> 25</option>
-    <option value="26"> 26</option>
-    <option value="27"> 27</option>
-    <option value="28"> 28</option>
-    <option value="29"> 29</option>
-    <option value="30"> 30</option>
-    <option value="31"> 31</option>
+<select id="days">
+    <option> Day
 </select>
 
-<button id="Submit" onclick="start()">Find My Horoscope!</button>
+    <select id="years">
+        <option> Year
+    </select>
+
+<button id="submitButton" onclick="start()">Find My Horoscope!</button>
+<div id="horoscope"></div>
+
+
+
 
 </body>
 </html>
