--- a/horoscope.html
+++ b/horoscope.html
@@ -2,20 +2,22 @@
 <html lang="en">
 <head>
 
+    <link rel="stylesheet" href="horoscope.css">
     <script src="horoscope.js"></script>
-    <style>
-        body{
-            background-color: lightcoral;
-        }
-        </style>
+
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Find Your Horoscope</title>
 </head>
 <body>
 
 
-<p style =" font-size:35px"> Find Your Horoscope!
-<p>Your Name:
+<p id="title" style="text-align: center; font-size="70px">
+Find Your Horoscope!
+</p>
+<p id="credentials"  style="font-size="45px">
+    Please enter your name and birthday
+</p>
+<p> Your Name:
 <input type="text" id="name" value="" size="20">
 
 <select id="month" onchange="doDays(this.value)">
@@ -37,12 +39,13 @@
     <option> Day
 </select>
 
-    <select id="years">
-        <option> Year
-    </select>
+
 
 <button id="submitButton" onclick="start()">Find My Horoscope!</button>
+
 <div id="horoscope"></div>
+
+<div id="birthday"></div>
 
 
 
