--- a/horoscope.html
+++ b/horoscope.html
@@ -15,7 +15,7 @@
 Find Your Horoscope!
 </p>
 <p id="credentials"  style="font-size="45px">
-    Please enter your name and birthday
+    Please enter your name and birthday:
 </p>
 <p> Your Name:
 <input type="text" id="name" value="" size="20">
@@ -40,12 +40,12 @@ Find Your Horoscope!
 </select>
 
 
-
 <button id="submitButton" onclick="start()">Find My Horoscope!</button>
-
-<div id="horoscope"></div>
-
 <div id="birthday"></div>
+<div id="horoscope"></div>
+<div id="horoscopetext"></div>
+<div id="image"></div>
+
 
 
 
